Corrected the fufu.jpeg image path in the fufu.html file
the image in the previous code could not be displyed in the browser.The correction provided the right path to the image

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Grassroot Recipes</h1>
         <a href="recipes/fufu.html">Fufu recipe</a>
+        <img src="images/fufu.jpeg" width="500px" height="200px" alt="Fufu dish">
     </body>
 </html>
