--- a/recipes/fufu.html
+++ b/recipes/fufu.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Fufu</h1>
-        <img src="./images/fufu.jpeg" width="50%" height="30%" alt="Fufu dish">
+        <img src="../images/fufu.jpeg" width="500px" height="200px" alt="Fufu dish">
     </body>
 </html>
