--- a/recipes/fufu.html
+++ b/recipes/fufu.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>My Recipes</title>
+        <title>Fufu Dish</title>
     </head>
     <body>
         <h1>Fufu</h1>
