added steps using ordered list

--- a/recipes/ademe detsi.html
+++ b/recipes/ademe detsi.html
@@ -19,14 +19,49 @@
 
         <h2>Ingredients</h2>
         <ul>
-            <li>Jute mallow leaves.</li>
-            <li>Fermented fish</li>
-            <li>Medium sized onions</li>
+            <li>2kg of Jute mallow leaves(ademe).</li>
+            <li>1 Fermented fish</li>
+            <li>1 Medium sized onions</li>
             <li>Pepper</li>
-            <li>Crab</li>
+            <li>200g of Crab</li>
             <li>precooked meat of choice</li>
-            <li>Red palm oil</li>
+            <li>1/2 cup of Red palm oil</li>
             <li>Salt</li>
+            <li>400ml Water</li>
+            <li>Salt petre</li>
+            <li>half a cube of maggi seasoing</li>
         </ul>
+
+        <h2>Steps</h2>
+
+        <ol>
+            <li>Get fresh ademe(jute) leave from the market.</li>
+            <li>
+                Sort out the leaves, eliminating diseased leaves and all other
+                non-jute leaves.
+            </li>
+            <li>Wash the sorted leaves and drain out the water.</li>
+            <li>Chop the leaves into small pieces.</li>
+            <li>peel the onion, wash and slice about half of it unto the choped ademe leaves</li>
+            <li>Place a sauce pan on a fire of medium heat.</li>
+            <li>Pour a little water into the pan (about 90ml of water).</li>
+            <li>
+                add about a quater tsp of salt petre, fermented fish, powdered pepper, 
+                and half a cube of maggi seasoning to the water.
+            </li>
+            <li>Cover the pan and leave on fire to boil to form a soup base.</li>
+            <li> On boiling, add the choped ademe to the soup base and leave to boil.</li>
+            <li>
+                At the first instance of boiling, beat the leaves with a laddle to release
+                the slim texture of the leaves.
+            </li>
+            <li>Allow to cook for 5 minutes, stirring intermittently until a smooth viscous texture is achieved</li>
+            <li>Add the precooked meat, crab and any other protein of choice</li>
+            <li>Leave to cook for 5 minutes</li>
+            <li>Add enough salt to taste</li>
+            <li>Add fresh pepper to ganish</li>
+            <li>Ademe detsi is ready to be served with Banku or Akple!</li>
+
+        </ol>
     </body>
 </html>
