Added step 17 to ademe detsi .html and a link to index.html

--- a/recipes/ademe detsi.html
+++ b/recipes/ademe detsi.html
@@ -29,7 +29,7 @@
             <li>Salt</li>
             <li>400ml Water</li>
             <li>Salt petre</li>
-            <li>half a cube of maggi seasoing</li>
+            <li>Seasoning</li>
         </ul>
 
         <h2>Steps</h2>
@@ -47,7 +47,7 @@
             <li>Pour a little water into the pan (about 90ml of water).</li>
             <li>
                 add about a quater tsp of salt petre, fermented fish, powdered pepper, 
-                and half a cube of maggi seasoning to the water.
+                and a seasoning of choice to the water.
             </li>
             <li>Cover the pan and leave on fire to boil to form a soup base.</li>
             <li> On boiling, add the choped ademe to the soup base and leave to boil.</li>
@@ -58,6 +58,7 @@
             <li>Allow to cook for 5 minutes, stirring intermittently until a smooth viscous texture is achieved</li>
             <li>Add the precooked meat, crab and any other protein of choice</li>
             <li>Leave to cook for 5 minutes</li>
+            <li>Add a quarter cup of red palm oil</li>
             <li>Add enough salt to taste</li>
             <li>Add fresh pepper to ganish</li>
             <li>Ademe detsi is ready to be served with Banku or Akple!</li>
