--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <h1>Grassroot Recipes</h1>
-        <a href="recipes/fufu.html">Fufu recipe</a>
+    <ul>
+        <li><a href="recipes/fufu.html">Fufu Recipe</a></li>
+        <li><a href="recipes/ademe detsi.html">Ademe Detsi Recipe</a></li>
+    </ul>
+        
         
     </body>
 </html>
