renamed akple with ademe.jpeg to ademedetsi.jpeg

--- a/recipes/ademe detsi.html
+++ b/recipes/ademe detsi.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Ademe detsi</h1>
-        <img src="../images/akple with ademe.jpeg" width="500px" height="300px" alt="An akple dish">
+        <img src="../images/ademedetsi.jpeg" width="500px" height="300px" alt="An akple dish">
         
         <h2>Description</h2>
         <p>
