Added a description of palava sauce

--- a/recipes/palavasauce.html
+++ b/recipes/palavasauce.html
@@ -7,5 +7,19 @@
     <body>
         <h1>Palava sauce</h1>
         <img src="../images/palavasauce.jpg" height="300px" width="500px" alt="Palava sauce">
+
+        <h2>Description</h2>
+        <p>
+            Palava is a word coined from the enlish word <em>Palaver</em> which in turn is from a 
+            portuguese word that means idle chatter. However this word became the name of a popular 
+            West African delicacy, no one knows. But the meaning of the name suggests that the delicious taste
+            of the dish brought with it idle chatter by the people who ate it.</p>
+        <p>
+            This dish cannot be originally linked to any West African country. 
+            In Ghana, palava sauce is prepare with kontonmire leaves and egusi(melon seeds)
+            as the main ingredients. Palava sauce can be served with any dish of choice
+            some of which are cooked rice, yam and plantain.
+        </p>
+        <h2>Ingredients</h2>
     </body>
 </html>
