Modified spellings and added ingredients content
Changed lower case e in english to upper case E. Also changed upper case P in palaver to lower case. portuguese was also modified.

--- a/recipes/palavasauce.html
+++ b/recipes/palavasauce.html
@@ -10,16 +10,33 @@
 
         <h2>Description</h2>
         <p>
-            Palava is a word coined from the enlish word <em>Palaver</em> which in turn is from a 
-            portuguese word that means idle chatter. However this word became the name of a popular 
+            Palava is a word coined from the English word <em>palaver</em> which in turn is from a 
+            Portuguese word that means idle chatter. However this word became the name of a popular 
             West African delicacy, no one knows. But the meaning of the name suggests that the delicious taste
             of the dish brought with it idle chatter by the people who ate it.</p>
         <p>
             This dish cannot be originally linked to any West African country. 
-            In Ghana, palava sauce is prepare with kontonmire leaves and egusi(melon seeds)
+            In Ghana, palava sauce is prepare with kontonmire leaves and agushie(melon seeds)
             as the main ingredients. Palava sauce can be served with any dish of choice
             some of which are cooked rice, yam and plantain.
         </p>
+
         <h2>Ingredients</h2>
+        <strong>5 Servings</strong>
+        <ul>
+            <li>Kontomire leaves/ cocoyam leaves About 15</li>
+            <li>5 small tomatoes</li>
+            <li>3 medium sized onions</li>
+            <li>Pepper</li>
+            <li>1 large smoked salmon</li>
+            <li>1 cup of grounded melon seeds(agushie or akatua)</li>
+            <li>1/2 cup palm oil</li>
+            <li>1 Salted fish (Koobi)</li>
+            <li>3 tsp of shrimp powder</li>
+            <li>Salt</li>
+            <li>Spices</li>
+        </ul>
+
+        <h2></h2>
     </body>
 </html>
