Added the Steps content

--- a/recipes/palavasauce.html
+++ b/recipes/palavasauce.html
@@ -37,6 +37,48 @@
             <li>Spices</li>
         </ul>
 
-        <h2></h2>
+        <h2>Steps</h2>
+        <ol>
+
+            <em>Prepare the ingredients</em>
+            <li>
+                Get grounded melon seeds from the market. Add water, make it into a paste
+                and set it aside.
+            </li>    
+            <li>
+                Wash kontomire leaves with a generous amount of salt to prevent itching of hands 
+                when cutting.
+            </li>
+            <li>Cut kontomire into desired stripes.</li>
+            <li>
+                Put the cut kotomire into a saucepan with little water and place on high heat.
+                Cover and allow to boil.
+            </li>
+            <li>
+                Turn the kontomire after about five minutes of cooking to make sure everything
+                is cooked thoroughly. Turn off fire and set aside.
+            </li>
+            <li>Blend two onions, tomatoes, pepper and preferred spices together, set aside.</li> 
+            <li>
+                Remove the flesh of the salmon, break into two and remove the bones, 
+                break into desired sizes, set aside.
+            </li>
+            <li>Slice the remaining onion.</li>
+                
+            <em>To make the stew</em>
+            <li>Pour palm oil into a medium saucepan.</li>
+            <li>Add half of the sliced onions and salted fish if using.</li>
+            <li>Fry till onions are softened.</li>
+            <li>Add the blended tomatoes, onions, spices and pepper.</li>
+            <li>Let it simmer on medium heat.</li>
+            <li>Add the salmon, salt and grounded shrimp if using. </li>
+            <li>Cover and let simmer for 10 minutes till sauce is bare thickened.</li>
+            <li>Add in the blended melon seeds, DO NOT STIR, cover and reduce heat to low.</li>
+            <li>Let it simmer 8 to 10 minutes or till the melon seed paste sets. </li>
+            <li>Add the steamed kontonmire with gentle stirring. </li>
+            <li>Add the remaining sliced onions.</li>
+            <li>Let simmer for about five minutes till onions are softened. </li>
+            <li>Serve with yam, rice, plantains or sweet potatoes. </li>
+        </ol>
     </body>
 </html>
