Changed emphasis element to strong element on lines 43 and 69

--- a/recipes/palavasauce.html
+++ b/recipes/palavasauce.html
@@ -40,7 +40,8 @@
         <h2>Steps</h2>
         <ol>
 
-            <em>Prepare the ingredients</em>
+            <strong>Prepare the ingredients</strong>
+            <br>
             <li>
                 Get grounded melon seeds from the market. Add water, make it into a paste
                 and set it aside.
@@ -64,8 +65,9 @@
                 break into desired sizes, set aside.
             </li>
             <li>Slice the remaining onion.</li>
-                
-            <em>To make the stew</em>
+            <br>
+            <strong>To make the stew</strong>
+            
             <li>Pour palm oil into a medium saucepan.</li>
             <li>Add half of the sliced onions and salted fish if using.</li>
             <li>Fry till onions are softened.</li>
