Added a link to palavasauce.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="recipes/fufu.html">Fufu Recipe</a></li>
         <li><a href="recipes/ademedetsi.html">Ademe Detsi Recipe</a></li>
+        <li><a href="recipes/palavasauce.html"> Palava sauce </a></li>
     </ul>
         
         
