Corrected spellings of prepared on line 19 and changed kontonmire to kontomire

--- a/recipes/palavasauce.html
+++ b/recipes/palavasauce.html
@@ -16,7 +16,7 @@
             of the dish brought with it idle chatter by the people who ate it.</p>
         <p>
             This dish cannot be originally linked to any West African country. 
-            In Ghana, palava sauce is prepare with kontonmire leaves and agushie(melon seeds)
+            In Ghana, palava sauce is prepared with kontomire leaves and agushie(melon seeds)
             as the main ingredients. Palava sauce can be served with any dish of choice
             some of which are cooked rice, yam and plantain.
         </p>
@@ -52,7 +52,7 @@
             </li>
             <li>Cut kontomire into desired stripes.</li>
             <li>
-                Put the cut kotomire into a saucepan with little water and place on high heat.
+                Put the cut kontomire into a saucepan with little water and place on high heat.
                 Cover and allow to boil.
             </li>
             <li>
@@ -77,7 +77,7 @@
             <li>Cover and let simmer for 10 minutes till sauce is bare thickened.</li>
             <li>Add in the blended melon seeds, DO NOT STIR, cover and reduce heat to low.</li>
             <li>Let it simmer 8 to 10 minutes or till the melon seed paste sets. </li>
-            <li>Add the steamed kontonmire with gentle stirring. </li>
+            <li>Add the steamed kontomire with gentle stirring. </li>
             <li>Add the remaining sliced onions.</li>
             <li>Let simmer for about five minutes till onions are softened. </li>
             <li>Serve with yam, rice, plantains or sweet potatoes. </li>
