Added a <strong></strong> on line 78

--- a/recipes/palavasauce.html
+++ b/recipes/palavasauce.html
@@ -75,7 +75,7 @@
             <li>Let it simmer on medium heat.</li>
             <li>Add the salmon, salt and grounded shrimp if using. </li>
             <li>Cover and let simmer for 10 minutes till sauce is bare thickened.</li>
-            <li>Add in the blended melon seeds, DO NOT STIR, cover and reduce heat to low.</li>
+            <li>Add in the blended melon seeds, <strong>do not stir</strong>, cover and reduce heat to low.</li>
             <li>Let it simmer 8 to 10 minutes or till the melon seed paste sets. </li>
             <li>Add the steamed kontomire with gentle stirring. </li>
             <li>Add the remaining sliced onions.</li>
