--- a/recipes/palavasauce.html
+++ b/recipes/palavasauce.html
@@ -6,21 +6,23 @@
     </head>
     <body>
         <h1>Palava sauce</h1>
-        <img src="../images/palavasauce.jpg" height="300px" width="500px" alt="Palava sauce">
-
+            <img src="../images/palavasauce.jpg" height="300px" width="500px" 
+            alt="Palava sauce">
         <h2>Description</h2>
-        <p>
-            Palava is a word coined from the English word <em>palaver</em> which in turn is from a 
-            Portuguese word that means idle chatter. However this word became the name of a popular 
-            West African delicacy, no one knows. But the meaning of the name suggests that the delicious taste
-            of the dish brought with it idle chatter by the people who ate it.</p>
-        <p>
-            This dish cannot be originally linked to any West African country. 
-            In Ghana, palava sauce is prepared with kontomire leaves and agushie(melon seeds)
-            as the main ingredients. Palava sauce can be served with any dish of choice
-            some of which are cooked rice, yam and plantain.
-        </p>
-
+            <p>
+                Palava is a word coined from the English word <em>palaver</em> 
+                which in turn is from a Portuguese word that means idle chatter. 
+                However this word became the name of a popular West African delicacy,
+                no one knows. But the meaning of the name suggests that the delicious 
+                taste of the dish brought with it idle chatter by the people who ate it.
+            </p>
+            <p>
+                This dish cannot be originally linked to any West African country. 
+                In Ghana, palava sauce is prepared with kontomire leaves and 
+                agushie(melon seeds) as the main ingredients. Palava sauce 
+                can be served with any dish of choice some of which are cooked 
+                rice, yam and plantain.
+            </p>
         <h2>Ingredients</h2>
         <strong>5 Servings</strong>
         <ul>
@@ -36,51 +38,58 @@
             <li>Salt</li>
             <li>Spices</li>
         </ul>
-
         <h2>Steps</h2>
         <ol>
-
             <strong>Prepare the ingredients</strong>
             <br>
             <li>
-                Get grounded melon seeds from the market. Add water, make it into a paste
-                and set it aside.
+                Get grounded melon seeds from the market. Add water, 
+                make it into a paste and set it aside.
             </li>    
             <li>
-                Wash kontomire leaves with a generous amount of salt to prevent itching of hands 
-                when cutting.
+                Wash kontomire leaves with a generous amount of salt 
+                to prevent itching of hands when cutting.
             </li>
             <li>Cut kontomire into desired stripes.</li>
             <li>
-                Put the cut kontomire into a saucepan with little water and place on high heat.
-                Cover and allow to boil.
+                Put the cut kontomire into a saucepan with little 
+                water and place on high heat. Cover and allow to boil.
             </li>
             <li>
-                Turn the kontomire after about five minutes of cooking to make sure everything
-                is cooked thoroughly. Turn off fire and set aside.
+                Turn the kontomire after about five minutes of 
+                cooking to make sure everything is cooked thoroughly. 
+                Turn off fire and set aside.
             </li>
-            <li>Blend two onions, tomatoes, pepper and preferred spices together, set aside.</li> 
+            <li>Blend two onions, tomatoes, pepper and preferred spices 
+                together, set aside.
+            </li> 
             <li>
-                Remove the flesh of the salmon, break into two and remove the bones, 
-                break into desired sizes, set aside.
+                Remove the flesh of the salmon, break into two and remove 
+                the bones, break into desired sizes, set aside.
             </li>
             <li>Slice the remaining onion.</li>
             <br>
             <strong>To make the stew</strong>
-            
-            <li>Pour palm oil into a medium saucepan.</li>
-            <li>Add half of the sliced onions and salted fish if using.</li>
-            <li>Fry till onions are softened.</li>
-            <li>Add the blended tomatoes, onions, spices and pepper.</li>
-            <li>Let it simmer on medium heat.</li>
-            <li>Add the salmon, salt and grounded shrimp if using. </li>
-            <li>Cover and let simmer for 10 minutes till sauce is bare thickened.</li>
-            <li>Add in the blended melon seeds, <strong>do not stir</strong>, cover and reduce heat to low.</li>
-            <li>Let it simmer 8 to 10 minutes or till the melon seed paste sets. </li>
-            <li>Add the steamed kontomire with gentle stirring. </li>
-            <li>Add the remaining sliced onions.</li>
-            <li>Let simmer for about five minutes till onions are softened. </li>
-            <li>Serve with yam, rice, plantains or sweet potatoes. </li>
+            <li>Pour palm oil into a medium saucepan. Add half of the sliced
+                onions and salted fish if using. Fry till onions are softened.
+            </li>
+            <li>Add the blended tomatoes, onions, spices and pepper.
+                Let it simmer on medium heat. Add the salmon,
+                salt and grounded shrimp if using. 
+            </li>
+            <li>Cover and let simmer for 10 minutes till sauce is bare thickened.
+                Add in the blended melon seeds, <strong>do not stir</strong>, 
+                cover and reduce heat to low.
+            </li>
+            <li>
+                Let it simmer 8 to 10 minutes or till the melon seed paste sets. 
+                Add the steamed kontomire with gentle stirring. Add the remaining
+                sliced onions.
+            </li>
+            <li>
+                Let simmer for about five minutes till onions are softened.
+                Serve with yam, rice, plantains or sweet potatoes. 
+            </li>
         </ol>
     </body>
 </html>
