--- a/recipes/fufu.html
+++ b/recipes/fufu.html
@@ -51,7 +51,8 @@
                     cubes.
                 </li>
 
-                <li>Place the cassava and plantain into a saucepan, add 100ml of water, 
+                <li>
+                    Place the cassava and plantain into a saucepan, add 100ml of water, 
                     cover the pan and boil the content under medium heat for 20 minutes
                     or more depending on how hard the cassava is.   
                 </li>
