--- a/recipes/fufu.html
+++ b/recipes/fufu.html
@@ -19,7 +19,8 @@
                 with traditional wooden mortar and pestle or blended with a fufu
                 blending machine.
             </p>
-            <p>When the cassava and plantain are well mashed, they are mixed together. 
+            <p>
+                When the cassava and plantain are well mashed, they are mixed together. 
                 The homogeneous mixture is then rolled into sizable balls and served
                 with soup or sauce. In Ghana, it is mostly serve with light (pepper)
                 soup. Yet it can also be served with goundnut soup, palm nut soup 
