--- a/recipes/fufu.html
+++ b/recipes/fufu.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <h1>Fufu</h1>
-            <img src="../images/fufu.jpeg" width="500px" height="200px" alt="Fufu dish">
+            <img src="../images/fufu.jpeg" width="500px" height="200px" 
+                 alt="Fufu dish">
         <h2> Description </h2>
             <p>
                 Fufu is a pounded meal in West African Cuisine. It is a Twi
