--- a/recipes/fufu.html
+++ b/recipes/fufu.html
@@ -21,11 +21,12 @@
                 blending machine.
             </p>
             <p>
-                When the cassava and plantain are well mashed, they are mixed together. 
-                The homogeneous mixture is then rolled into sizable balls and served
-                with soup or sauce. In Ghana, it is mostly serve with light (pepper)
-                soup. Yet it can also be served with goundnut soup, palm nut soup 
-                or ebunuebunu (a local green vegetable soup). Fufu is regularly 
+                When the cassava and plantain are well mashed, they are mixed 
+                together. The homogeneous mixture is then rolled into sizable 
+                balls and served with soup or sauce. In Ghana, it is mostly
+                serve with light (pepper) soup. Yet it can also be served with
+                groundnut soup, palm nut soup or ebunuebunu 
+                (a local green vegetable soup). Fufu is regularly 
                 eaten by hand. One has to tear off a small, bite-sized
                 ball which is then dipped in soup, stew or sauce.
             </p>
