--- a/recipes/ademedetsi.html
+++ b/recipes/ademedetsi.html
@@ -55,7 +55,9 @@
                 and a seasoning of choice to the water. Cover the pan and leave on
                 fire to boil to form a soup base.
             </li1>
-            <li>On boiling, add the choped ademe to the soup base and leave to boil.</li>
+            <li>
+                On boiling, add the choped ademe to the soup base and leave to boil.
+            </li>
             <li>
                 At the first instance of boiling, beat the leaves with a 
                 laddle to release the slim texture of the leaves.
