Modified lines 65 and 71

--- a/recipes/ademedetsi.html
+++ b/recipes/ademedetsi.html
@@ -62,12 +62,14 @@
                 At the first instance of boiling, beat the leaves with a 
                 laddle to release the slim texture of the leaves.
             </li>
-            <li>Allow to cook for 5 minutes, stirring intermittently
+            <li>
+                Allow to cook for 5 minutes, stirring intermittently
                 until a smooth viscous texture is achieved then add 
                 the precooked meat, crab and any other protein of choice.
             </li>
            
-            <li>Leave to cook for 5 minutes. Add a quarter cup of red palm oil.
+            <li>
+                Leave to cook for 5 minutes. Add a quarter cup of red palm oil.
                 Add enough salt to taste. Add fresh green pepper to ganish.
             </li>
             
