--- a/recipes/palavasauce.html
+++ b/recipes/palavasauce.html
@@ -14,7 +14,8 @@
                 which in turn is from a Portuguese word that means idle chatter. 
                 However this word became the name of a popular West African delicacy,
                 no one knows. But the meaning of the name suggests that the delicious 
-                taste of the dish brought with it idle chatter by the people who ate it.
+                taste of the dish brought with it idle chatter by the people who ate 
+                it.
             </p>
             <p>
                 This dish cannot be originally linked to any West African country. 
@@ -25,71 +26,71 @@
             </p>
         <h2>Ingredients</h2>
         <strong>5 Servings</strong>
-        <ul>
-            <li>Kontomire leaves/ cocoyam leaves About 15</li>
-            <li>5 small tomatoes</li>
-            <li>3 medium sized onions</li>
-            <li>Pepper</li>
-            <li>1 large smoked salmon</li>
-            <li>1 cup of grounded melon seeds(agushie or akatua)</li>
-            <li>1/2 cup palm oil</li>
-            <li>1 Salted fish (Koobi)</li>
-            <li>3 tsp of shrimp powder</li>
-            <li>Salt</li>
-            <li>Spices</li>
-        </ul>
+            <ul>
+                <li>Kontomire leaves/ cocoyam leaves About 15</li>
+                <li>5 small tomatoes</li>
+                <li>3 medium sized onions</li>
+                <li>Pepper</li>
+                <li>1 large smoked salmon</li>
+                <li>1 cup of grounded melon seeds(agushie or akatua)</li>
+                <li>1/2 cup palm oil</li>
+                <li>1 Salted fish (Koobi)</li>
+                <li>3 tsp of shrimp powder</li>
+                <li>Salt</li>
+                <li>Spices</li>
+            </ul>
         <h2>Steps</h2>
-        <ol>
-            <strong>Prepare the ingredients</strong>
-            <br>
-            <li>
-                Get grounded melon seeds from the market. Add water, 
-                make it into a paste and set it aside.
-            </li>    
-            <li>
-                Wash kontomire leaves with a generous amount of salt 
-                to prevent itching of hands when cutting.
-            </li>
-            <li>Cut kontomire into desired stripes.</li>
-            <li>
-                Put the cut kontomire into a saucepan with little 
-                water and place on high heat. Cover and allow to boil.
-            </li>
-            <li>
-                Turn the kontomire after about five minutes of 
-                cooking to make sure everything is cooked thoroughly. 
-                Turn off fire and set aside.
-            </li>
-            <li>Blend two onions, tomatoes, pepper and preferred spices 
-                together, set aside.
-            </li> 
-            <li>
-                Remove the flesh of the salmon, break into two and remove 
-                the bones, break into desired sizes, set aside.
-            </li>
-            <li>Slice the remaining onion.</li>
-            <br>
-            <strong>To make the stew</strong>
-            <li>Pour palm oil into a medium saucepan. Add half of the sliced
-                onions and salted fish if using. Fry till onions are softened.
-            </li>
-            <li>Add the blended tomatoes, onions, spices and pepper.
-                Let it simmer on medium heat. Add the salmon,
-                salt and grounded shrimp if using. 
-            </li>
-            <li>Cover and let simmer for 10 minutes till sauce is bare thickened.
-                Add in the blended melon seeds, <strong>do not stir</strong>, 
-                cover and reduce heat to low.
-            </li>
-            <li>
-                Let it simmer 8 to 10 minutes or till the melon seed paste sets. 
-                Add the steamed kontomire with gentle stirring. Add the remaining
-                sliced onions.
-            </li>
-            <li>
-                Let simmer for about five minutes till onions are softened.
-                Serve with yam, rice, plantains or sweet potatoes. 
-            </li>
-        </ol>
+            <ol>
+                <strong>Prepare the ingredients</strong>
+                <br>
+                <li>
+                    Get grounded melon seeds from the market. Add water, 
+                    make it into a paste and set it aside.
+                </li>    
+                <li>
+                    Wash kontomire leaves with a generous amount of salt 
+                    to prevent itching of hands when cutting.
+                </li>
+                <li>Cut kontomire into desired stripes.</li>
+                <li>
+                    Put the cut kontomire into a saucepan with little 
+                    water and place on high heat. Cover and allow to boil.
+                </li>
+                <li>
+                    Turn the kontomire after about five minutes of 
+                    cooking to make sure everything is cooked thoroughly. 
+                    Turn off fire and set aside.
+                </li>
+                <li>Blend two onions, tomatoes, pepper and preferred spices 
+                    together, set aside.
+                </li> 
+                <li>
+                    Remove the flesh of the salmon, break into two and remove 
+                    the bones, break into desired sizes, set aside.
+                </li>
+                <li>Slice the remaining onion.</li>
+                <br>
+                <strong>To make the stew</strong>
+                <li>Pour palm oil into a medium saucepan. Add half of the sliced
+                    onions and salted fish if using. Fry till onions are softened.
+                </li>
+                <li>Add the blended tomatoes, onions, spices and pepper.
+                    Let it simmer on medium heat. Add the salmon,
+                    salt and grounded shrimp if using. 
+                </li>
+                <li>Cover and let simmer for 10 minutes till sauce is bare thickened.
+                    Add in the blended melon seeds, <strong>do not stir</strong>, 
+                    cover and reduce heat to low.
+                </li>
+                <li>
+                    Let it simmer 8 to 10 minutes or till the melon seed paste sets. 
+                    Add the steamed kontomire with gentle stirring. Add the remaining
+                    sliced onions.
+                </li>
+                <li>
+                    Let simmer for about five minutes till onions are softened.
+                    Serve with yam, rice, plantains or sweet potatoes. 
+                </li>
+            </ol>
     </body>
 </html>
